--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -8,12 +8,17 @@
 # mini E3 with that SD card.
 
 # See docs/Config_Reference.md for a description of parameters.
+
+
+#github persanal access token: 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
+
 [include Background/mainsail.cfg]
 [include Macros/macros.cfg]
 [include Macros/color.cfg]
 [include Macros/better_timeout.cfg]
 [include KAMP_Settings.cfg]
 [include Macros/Circle_Macros.cfg]
+[include shell_command.cfg]
 
 [pause_resume]
 [exclude_object]
